# Attendance-DA1

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
Attendance/: Attendance.cpp  Attendance.cxx  CMakeLists.txt
Core/: CMakeLists.txt
Core/Models/: BuoiDiemDanh.cpp  BuoiDiemDanh.hpp  CMakeLists.txt  DangKyHoc.cpp  DangKyHoc.hpp  DataType.cpp  DataType.hpp  GiangVien.cpp  GiangVien.hpp  LopHocPhan.cpp  LopHocPhan.hpp  SinhVien.cpp  SinhVien.hpp  models.cpp  models.hpp
Core/Utils/: CMakeLists.txt  Utility.hpp  utility.hpp
Manager/: AppManager.cpp  AppManager.hpp  BaoCaoManager.cpp  BaoCaoManager.hpp  CMakeLists.txt  DangKyHocManager.cpp  DangKyHocManager.hpp  DiemDanhManager.cpp  DiemDanhManager.hpp  GiangVienManager.cpp  GiangVienManager.hpp  LopHocPhanManager.cpp  LopHocPhanManager.hpp  SinhVienManager.cpp  SinhVienManager.hpp  ThongKeManager.cpp  ThongKeManager.hpp
Tests/: CMakeLists.txt  TestAccount.cpp  TestClassRoom.cpp  TestContact.cpp  TestDatetime.cpp  TestStudyPeriod.cpp
Ui/: CMakeLists.txt  UiManager.cpp  UiManager.hpp
Ui/Core/: UiColors.cpp  UiColors.hpp  UiHelper.cpp  UiHelper.hpp
Ui/Form/: SinhVienForm.cpp  SinhVienForm.hpp
Ui/Screen/: LoginScreen.cpp  LoginScreen.hpp  MainMenuScreen.cpp  MainMenuScreen.hpp  SinhVienScreen.cpp  SinhVienScreen.hpp
cmake/: Dependencies.cmake
